Fix basic structure and add prettier rules

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 NODE_ENV=development
 PORT=3000
+
+MYSQL_DB_HOST=localhost
+MYSQL_DB_USERNAME=root
+MYSQL_DB_PASSWORD=hassan123
+MYSQL_DB_DATABASE_NAME=nodejs_microservice_boilerplate
+
+APP_URL=http://localhost:3000/
