--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "main": "routes/index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "start": "nodemon index.js",
     "lint": "eslint --format codeframe index.js controllers/** app/**",
     "migrate": "sequelize db:migrate",
     "seed": "sequelize db:seed:all",
