--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
         "max-len": [2, { "code": 300 }],
         "no-unused-vars": 2,
         "no-useless-return": 2,
-        "no-console": 0
+        "no-console": 0,
+        "indent": ["error", 4]
     }
 }
