--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "taxitobarcelona",
+  "name": "lunchon",
   "preferGlobal": true,
   "bin": "./bin/consoleCommands.js",
   "version": "1.0.0",
@@ -18,7 +18,6 @@
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
     "cherio": "^1.0.0-rc.2",
-    "commander": "^2.19.0",
     "common-env": "^6.3.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -28,13 +27,10 @@
     "express-handlebars": "^3.0.2",
     "express-session": "^1.15.6",
     "http-proxy": "^1.17.0",
-    "inquirer": "^6.2.2",
     "moment": "^2.24.0",
     "multer": "^1.4.1",
-    "pug": "^2.0.3",
     "sequelize": "^4.43.0",
     "shortid": "^2.2.14",
-    "stripe": "^6.25.1",
     "urlencode": "^1.1.0",
     "uuid": "^3.3.2",
     "morgan": "^1.9.1"
@@ -53,6 +49,7 @@
     "lodash.times": "^4.3.2",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.10",
+    "prettier": "^1.18.2",
     "sequelize-cli": "^5.4.0"
   }
 }
