add esm packege for supporting es6 features

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "main": "routes/index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon -r esm index.js",
     "lint": "eslint --format codeframe index.js controllers/** app/**",
     "migrate": "sequelize db:migrate",
     "seed": "sequelize db:seed:all",
@@ -23,17 +23,18 @@
     "crypto": "^1.0.1",
     "debug": "^4.1.1",
     "dotenv": "^6.2.0",
+    "esm": "^3.2.25",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.15.6",
     "http-proxy": "^1.17.0",
     "moment": "^2.24.0",
+    "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "sequelize": "^4.43.0",
     "shortid": "^2.2.14",
     "urlencode": "^1.1.0",
-    "uuid": "^3.3.2",
-    "morgan": "^1.9.1"
+    "uuid": "^3.3.2"
   },
   "keywords": [],
   "description": "",
